Supporting more endpoints

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
 language: node_js
-
 node_js:
-  - "0.10"
-  - "0.11"
-
+- '0.10'
+- '0.11'
 branches:
   only:
-    - master
-
+  - master
 script: npm test
+deploy:
+  provider: npm
+  email: ask.colorfully.me@gmail.com
+  api_key:
+    secure: BQfs3FuBBiEj/WmT9wEIWUjPlE7KdIHearNb+Ukh8FLZ6ntNCLKTNGz8fdM1eB/kdonSyvysYNKa48hYzN7hzeq0Yyl75YtWzNYb3VbxIhAeNeee65rOY+moI4M/8oSTwDFiK7We456vDfOzGFdm2IHEl0emCyI/bYl8mNgHPuk=
+  on:
+    tags: true
+    repo: ColorfullyMe/idol-client
