--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,12 @@ node_js:
 - '0.10'
 - '0.11'
 - '0.12'
+- iojs
 branches:
   only:
   - master
+before_install:
+  - "npm install -g npm@latest"
 script: npm test
 deploy:
   provider: npm
