--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
 script: npm test
 deploy:
   provider: npm
+  skip_cleanup: true
   email: ask.colorfully.me@gmail.com
   api_key:
     secure: BQfs3FuBBiEj/WmT9wEIWUjPlE7KdIHearNb+Ukh8FLZ6ntNCLKTNGz8fdM1eB/kdonSyvysYNKa48hYzN7hzeq0Yyl75YtWzNYb3VbxIhAeNeee65rOY+moI4M/8oSTwDFiK7We456vDfOzGFdm2IHEl0emCyI/bYl8mNgHPuk=
